--- a/backend/templates/og_preview.html
+++ b/backend/templates/og_preview.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8" />
 
@@ -11,12 +10,11 @@
     <meta property="og:image" content="{{ post.image_url }}" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:url" content="{{ base_url }}/share/{{ post_id }}" />
+    <meta property="og:url" content="https://backend.cofau.com/share/{{ post_id }}" />
 
 </head>
-
 <body>
     Preview generated.
 </body>
-
 </html>
+
