--- a/backend/templates/og_preview.html
+++ b/backend/templates/og_preview.html
@@ -10,7 +10,7 @@
     <meta property="og:image" content="{{ post.image_url }}" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta property="og:url" content="https://backend.cofau.com/share/{{ post_id }}" />
+    <meta property="og:url" content="https://api.cofau.com/share/{{ post_id }}" />
 
 </head>
 <body>
